--- a/auto-update.yml
+++ b/auto-update.yml
@@ -1,3 +1,34 @@
 .github/
 └── workflows/
     └── auto-update.yml
+name: Auto Update Data
+
+on:
+  workflow_dispatch:     # manual trigger enabled
+  schedule:
+    - cron: '0 6 * * *' # runs daily at 6 AM UTC
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Run data scripts
+        run: |
+          python scripts/fetch_kosis.py
+          python scripts/clean_data.py
+      - name: Commit updated data
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add dashboard/tableau_data.xlsx
+          git commit -m "Auto-update data"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
